# api

./: README.md
api/: Cargo.toml
api/src/: app.rs  lib.rs  main.rs
api/src/router/: mod.rs
api/src/router/middlewares/: json_response_wrapper.rs  mod.rs
api/src/router/routes/: mod.rs  recommendations.rs  tests.rs
api/src/router/routes/seeds/: artists.rs  genres.rs  mod.rs  tracks.rs
