[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }

rustyspoty = { git = "https://github.com/bluesimp1102/rustyspoty.git" }
tower = "0.4.13"
tower-service = "0.3.2"
futures = "0.3.30"
